Fixed provided by logo placements and block sizes to human readable form.

--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -611,27 +611,27 @@ margin-left: 0;
   background-position: center center;
   display: inline-block;
   float: left;
-  height: 45px;
+  height: 65px;
 }
 #powered a.prasos {
   background-image: url('../img/prasos.png');
-  background-size: 80px;
-  width: 30%;
+  background-size: 201px;
+  width: 100%;
 }
 #powered a.coinmotion {
   background-image: url('../img/cm_dark.svg');
-  background-size: 80px;
-  width: 30%;
+  background-size: 300px;
+  width: 100%;
 }
 #powered a.bittiraha {
-  background-image: url('../img/bittiraha_logo.png');
-  background-size: 50px;
-  width: 20%;
+  background-image: url('../img/bittiraha_logo300.png');
+  background-size: 200px;
+  width: 100%;
 }
 #powered a.denarium {
-  background-image: url('../img/db_logo_small.png');
-  background-size: 50px;
-  width: 20%;
+  background-image: url('../img/denarium_red.svg');
+  background-size: 200px;
+  width: 100%;
 }
 
 @keyframes rotateThis {
